syntax = "proto3";

package homeapi.lights.v1;

option go_package = "github.com/bwilczynski/homeapi/lights";

message Light {
    string id = 1;
    string name = 2;
}

message ListRequest {
}

message ListResponse {
    repeated Light lights = 1;
}

message Group {
    string id = 1;
    string name = 2;
    repeated string lights = 3;
}

message ListGroupsRequest {
}

message ListGroupsResponse {
    repeated Group groups = 1;
}

message ToggleGroupRequest {
    string group_id = 1;
}

message ToggleGroupResponse {
}

service LightService {
    rpc List(ListRequest) returns (ListResponse);
    rpc ListGroups(ListGroupsRequest) returns (ListGroupsResponse);
    rpc ToggleGroup(ToggleGroupRequest) returns (ToggleGroupResponse);
}
